--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>data</title>
 
+    <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,7 +19,13 @@
       crossorigin="anonymous"
       defer
     ></script>
+
+    <!-- Ionicons -->
+    <script defer type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script defer nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
     <script src="dropdown.js" defer></script>
+    <script src="sort.js" defer></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -30,15 +37,17 @@
               <b>Navn:</b>
             </p>
           </div>
-          <div class="col-sm-4 col-lg-4">
+          <div class="col">
             <input type="text" size="31" name="navn" value="" autocomplete="false" id="name-input" />
+            <button class="btn btn-primary" type="button" id="seach-btn">Søk</button>
+            <button class="btn btn-primary" type="RESET">Nullstill</button>
           </div>
-          <div class="col-sm-4 col-lg-6">
+          <!-- <div class="col-sm-4 col-lg-6">
             <p>
               <button class="btn btn-primary" type="button" id="seach-btn">Søk</button>
               <button class="btn btn-primary" type="RESET">Nullstill</button>
             </p>
-          </div>
+          </div> -->
         </div>
         <div class="row">
           <div class="col-sm-12">
@@ -95,15 +104,19 @@
 
         <div class="row">
           <div class="col-sm-4 col-lg-2"><p>&nbsp; - Nærings Kode</p></div>
-          <div class="col-sm-4 col-lg-2">
-            <p><input type="text" / id="nærings-kode" placeholder="26.200" style="width: 200px" ></p>
+          <div class="col">
+            <p>
+              <input type="text" / id="nærings-kode" placeholder="26.200" style="width: 200px" > Næringskoder
+              finner du
+              <a href="https://www.ssb.no/klass/klassifikasjoner/6" target="_blank">Her</a>
+            </p>
           </div>
-          <div class="col-sm-4 col-lg-4 offset-lg-1 offset-md-1">
+          <!-- <div class="col-sm-4 col-lg-4 offset-lg-1 offset-md-1">
             <p>
               Næringskoder finner du
               <a href="https://www.ssb.no/klass/klassifikasjoner/6" target="_blank">Her</a>
             </p>
-          </div>
+          </div> -->
         </div>
 
         <div class="row">
@@ -168,8 +181,38 @@
             />
           </div>
         </div>
+
+        <div class="row">
+          <div class="col-sm-4 col-lg-2"><p>&nbsp; - Postnummer (forretningsadresse)</p></div>
+          <div class="col-sm-4 col-lg-4">
+            <input
+              type="text"
+              size="31"
+              name="tilAntallAnsatte"
+              value=""
+              autocomplete="false"
+              id="postnummer-input"
+              style="width: 200px"
+            />
+          </div>
+        </div>
       </form>
       <hr />
+
+      <!-- <div class="row">
+        <div class="liste-heading col-sm-2">
+          <b>Orgnr.</ion-icon></b>
+        </div>
+          <div class="liste-heading col-sm-4">
+            <b>Navn </b>
+          </div>
+        <div class="liste-heading col-sm-2">
+          <b>Postnr./sted</b>
+        </div>
+        <div class="liste-heading col-sm-2 text-center">
+        <b>Antall Ansatte</b>
+      </div>
+      </div> -->
 
       <div id="navn" class="test"></div>
     </section>
